# AutoResearch

./: .gitignore  Docs  README.md  clear_migrate.py  clear_pyc.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt
autoresearch_backend/: asgi.py  settings.py  urls.py  wsgi.py
cn_pydatic_examples/: __main__.py  bank_support.py  chat_app.py  flight_booking.py  pydantic_model.py  rag.py  roulette_wheel.py  sql_gen.py  stream_markdown.py  stream_whales.py  weather_agent.py
content_agent/: apps.py  models.py  urls.py  views.py
content_agent/services/: content_agent_service.py  utils.py
doc/docs/: doc_autoresearch_backend.md  doc_content_agent.md  doc_llm_endpoint.md  doc_main.md  doc_outline_agent.md  doc_paper_lists_retrive.md  doc_prompt_generator.md  project_entry.md
doc/specs/: spec_agent_md_maker.md  spec_entry_of_project.md
llm_endpoint/: apps.py  urls.py  views.py
llm_endpoint/services/: ChatModel.py  OllamaChat.py  OpenAIChat.py
outline_agent/: admin.py  api.py  apps.py  config.py  models.py  signals.py  tests.py  urls.py  views.py
outline_agent/services/: outline_agent_service.py
paper_lists_retrive/: apps.py  tests.py  urls.py  views.py
paper_lists_retrive/services/: Supabase_service.py
prompt_generator/: apps.py  tests.py  urls.py  views.py
prompt_generator/CONSTANT/PROMPTS/: CHECK_CITATION_PROMPT.py  CHECK_SUBSECTION_OUTLINE_PROMPT.py  CRITERIA_BASED_JUDGING_PROMPT.py  EDIT_FINAL_OUTLINE_PROMPT.py  LCE_PROMPT.py  MERGING_OUTLINE_PROMPT.py  NLI_PROMPT.py  __init__.py  (+3 more)
prompt_generator/services/: prompt_generator_service.py
